更新了找回密码的部分功能，下午完善好

--- a/chat/public/web/login.html
+++ b/chat/public/web/login.html
@@ -24,7 +24,7 @@
         <input type="text" class="web-input" placeholder="ID" name="username">
         <input type="password" class="web-input" placeholder="Password" name="password">
         <p class="login-txt-left"><a href="./register">Register</a></p>
-        <p class="login-txt-right"><a>Find password</a></p>
+        <p class="login-txt-right"><a href="./findpass">Find password</a></p>
         <div class="btn-login-div">
             <button class="btn-login" >Login</button>
         </div>
