新增中英文切換，語言包功能

--- a/chat/public/wap/contect_index.html
+++ b/chat/public/wap/contect_index.html
@@ -552,7 +552,9 @@
     //獲取get數據End
     //切換語言
     $("body").on("click",".language_div",function () {
-        $.cookie('language','ch',{path:'/'});
-        window.location.href="../index.html";
+       $.post('./lang',{},function(result){
+
+       })
+        window.location.reload();
     });
 </script>
