【更新】註冊接口

--- a/chat/test.html
+++ b/chat/test.html
@@ -8,10 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        var s="123实用第一";
-        
-        console.log(s.match(/^\w+$/).length);
-        </script>
+  <form action="phchatreg.php" method="POST">
+    <input type="id" value="gxc999">
+    <input type="password" value="111">
+    <input type="base_pass" value="222">
+    <input type="member_tel" value="333">
+    <input type="submit">
+    </form>
 </body>
 </html>
